--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ WTForms==3.0.1
 zipp==3.14.0
 email-validator ==1.3.1
 sqlalchemy-utils ==0.40.0
+pymysql ==1.0.3
+mysql ==0.0.3
+cryptography ==40.0.1
+requests == 2.28.2
